# air

./: .gitignore  .gitmodules  CMakeLists.txt  test  test.cc
dcc/blender/: __init__.py  air_panel.py  air_rig_vroid.py
dcc/blender/air/: air_hello.py
engine/include/: AC.h  Blob.h  Core.h  GL.h  GLTF.h  Image.h  Render.h  Renderer.h  Scene.h  Scenes.h  Transform.h  Window.h
engine/include/Animation/: AnimationInstance.h  AnimationView.h  ArmatureInstance.h
engine/include/Map/: Map.h
game/asset/Shader/: deferred_fs.glsl  deferred_vs.glsl  gbuffer_vs.glsl  screen_fs.glsl  ssao_fs.glsl  sssm_fs.glsl
game/res/: untitled.gltf
game/res/anim/: anim.md  anim1.md
game/res/bar_zup/: bar.gltf
game/res/base/: checkerPlane.gltf
game/res/blender/: Cube.gltf  SmallCube.gltf  Suzanne.gltf
game/res/idle_zup/: idle.gltf
game/src/: main.cc
include/engine/: AC.h  Camera.h  Core.h  Math.h  Mesh.h  Model.h  Profiler.h  Transform.h  gl.h  global.h  gltf.h  image.h  img.h  math.h  mesh.h  model.h  node.h  res.h  utility.h  window.h
include/glad/: glad.h
include/profiler/: ProfilerFileParse.h
program/: texpow2
program/SnapTool/: snaptool.cc
res/: Math.h  fs.glsl  fs1.glsl  main1.cc  test.gltf  vs.glsl
res/basic/: Cube.gltf  CubeTrans.gltf  General.gltf  Plane.gltf  PlaneSubmesh.gltf  Plane_Subdev.gltf  Plane_Submesh.mtl  Sphere.gltf  Suzanne.mtl
res/copy/: main.cc  main1.cc
res/idle/: idle.gltf
sandbox/: 1.csv  imgui_example.cc  main_profiler.cc
src/: glad.c  main.cc
third/assimp/: INSTALL_RECEIPT.json
third/glfw/: INSTALL_RECEIPT.json
(+162 files in other folders)
